--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   get: ^4.7.3
   lottie: ^3.3.2
   google_fonts: ^6.3.3
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
+  cloud_firestore: ^6.1.1
+  shared_preferences: ^2.5.4
 
 
 dev_dependencies:
