--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^6.1.3
   cloud_firestore: ^6.1.1
   shared_preferences: ^2.5.4
+  url_launcher: ^6.3.2
 
 
 dev_dependencies:
