--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,19 @@ dependencies:
   cloud_firestore: ^6.1.1
   shared_preferences: ^2.5.4
   url_launcher: ^6.3.2
+  google_generative_ai: ^0.4.7
+  http: ^1.6.0
+  image_picker: ^1.2.1
+  file_picker: ^10.3.8
+  pdf: ^3.11.3
+  printing: ^5.14.2
+  syncfusion_flutter_pdf: ^32.1.22
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
+  open_file: ^3.5.10
+  flutter_dotenv: ^6.0.0
+  intl: ^0.20.2
+
 
 
 dev_dependencies:
@@ -70,6 +83,7 @@ flutter:
   assets:
     - assets/animations/
     - assets/images/
+    - .env
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
